Fix footer on mobile
@EamonNerbonne

--- a/core/app/assets/stylesheets/base/footer.scss
+++ b/core/app/assets/stylesheets/base/footer.scss
@@ -1,6 +1,5 @@
 .footer {
   border-top: 1px solid lightgrey;
-  padding-bottom: 50px;
   text-align: center;
 }
 
@@ -10,11 +9,16 @@
   min-width: 320px;
   max-width: $siteWidth;
   padding: 10px 20px;
+  display: inline-block;
 }
 
 .footer-item {
   float: left;
   padding-right: 9px;
+
+  @include respond-to(400) {
+    line-height: 30px;
+  }
 
   &:after {
     content: "·";
